# template_fastapi

./: .env-example  .gitignore  .pre-commit-config.yaml  .ruff.toml  READ_ME.md  alembic.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 4ae62d27244c_added_chat_column_in_message_table.py  580ca2c834e0_added_user_and_personal_table.py  8eab123c8909_added_user_and_personal_table.py  9503928c8ba8_added_table_for_storing_messages.py  9aac8f1525d3_added_user_and_personal_table.py
requirements_folder/: requirements_dev.txt  requirements_prod.txt
src/: auth.py  config.py  crud.py  db.py  dependencies.py  enums.py  exception.py  mail.py  main.py  managers.py  mixins.py  models.py  router.py  router_ws.py  schemas.py  storage.py  t_utils.py  utils.py
tests/: conftest.py
